--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations</h1>
+    <h1>Hands On part  </h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
-    <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
-	<p><h1><a href="About.html">About This</a></h1>
+    
+	
+	<a href="index.html"><h2>HomePage</h2></a>.</p>
+	<p> <a href="contact.html"><h2>Conact me</h2></a>.</p>
+	<p> <a href="mymojor.html"><h2>My Major</h2></a>.</p>
+		<p> <a href="about.html"><h2>about me</h2></a>.</p>
+		<p> <a href="Age.html"><h2>How old Am I?</h2></a>.</p>
   </div>
 </body>
 </html>
