--- a/Age.html
+++ b/Age.html
@@ -29,9 +29,9 @@
     <h1>Hands on Part</h1>
     <h2>This application was deployed using AWS CodeDeploy by Mohammed Alotaibi.</h2>
  
-	 <p> <a href="index.html"><h2>HomePage</h2></a>.</p>
-
-		<p><h2> My name is Mohammed Alotaibi and I am studetn in Gannon University</h2></a>.</p>
+	 <p><a href="index.html"><h2>HomePage</h2></a>.</p>
+	
+		<p><h2>My age is 28<h2></a>.</p>
   </div>
 </body>
 </html>
